# eactalk

./: .gitignore  LICENSE  README.md  build.gradle  index.html  key.jks  local.properties  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/java/com/eacpay/: EacApp.java
app/src/main/java/com/eactalk/: EactalkApp.java
app/src/main/jni/eacpay-core/: .gitmodules  BRAddress.c  BRAddress.h  BRArray.h  BRBIP32Sequence.c  BRBIP32Sequence.h  BRBIP38Key.c  BRBIP38Key.h  BRBIP39Mnemonic.c  BRBIP39Mnemonic.h  BRBIP39WordsEn.h  BRBase58.c  BRBase58.h  BRBech32.c  BRBech32.h  BRBloomFilter.c  BRBloomFilter.h  BRChainParams.h  BRCrypto.c  BRCrypto.h  BRInt.h  BRKey.c  BRKey.h  BRMerkleBlock.c  BRMerkleBlock.h  BRPaymentProtocol.c  BRPaymentProtocol.h  BRPeer.c  BRPeer.h  BRPeerManager.c  BRPeerManager.h  BRSet.c  BRSet.h  BRTransaction.c  BRTransaction.h  BRWallet.c  BRWallet.h  LICENSE  README.md  test.c
app/src/main/jni/eactalk-core/: BRAddress.c  BRAddress.h  BRArray.h  BRBIP32Sequence.c  BRBIP32Sequence.h  BRBIP38Key.c  BRBIP38Key.h  BRBIP39Mnemonic.c  BRBIP39Mnemonic.h  BRBIP39WordsEn.h  BRBase58.c  BRBase58.h  BRBech32.c  BRBech32.h  BRBloomFilter.c  BRBloomFilter.h  BRChainParams.h  BRCrypto.c  BRCrypto.h  BRInt.h  BRKey.c  BRKey.h  BRMerkleBlock.c  BRMerkleBlock.h  BRPaymentProtocol.c  BRPaymentProtocol.h  BRPeer.c  BRPeer.h  BRPeerManager.c  BRPeerManager.h  BRSet.c  BRSet.h  BRTransaction.c  BRTransaction.h  BRWallet.c  BRWallet.h  LICENSE  README.md  test.c
app/src/main/jni/transition/: JNIBIP32Sequence.h  JNIBase58.h  JNIKey.h  PeerManager.c  PeerManager.h  core.c  core.h  wallet.c  wallet.h
app/src/main/kotlin/com/eactalk/: Link.kt  (+2 more)
app/src/main/res/anim/: enter_from_bottom.xml  exit_to_bottom.xml
app/src/main/res/color/: bottom_nav_text_color.xml  btn_text_color.xml
app/src/main/res/drawable/: b_3d86f8_10.xml  b_3d86f8_4.xml  b_423d86f8_3d86f8_4.xml  b_42e41e1e_e41e1e.xml  b_bottom_f1.xml  b_e41e1e_4.xml  b_f1_20.xml  b_f6_10.xml  b_f6_4.xml  b_f7_4.xml  b_ff34c4_10.xml  b_white_border.xml  b_white_border_10.xml  b_white_top_10.xml  btn_background.xml  btn_background_red.xml  start_bottom_bg.xml  start_top_bg.xml
app/src/main/res/layout/: activity_about.xml  activity_about_backup.xml  activity_advanced.xml  activity_api_settings.xml  activity_bread.xml  activity_camera.xml  activity_code.xml  activity_contact_detail.xml  activity_cus_web.xml  activity_disabled.xml  activity_display_currency.xml  activity_fingerprint.xml  activity_help.xml  activity_home_detail.xml  activity_import.xml  activity_init_word.xml  activity_input_word.xml  activity_input_words.xml  activity_intro.xml  activity_intro_recover.xml  activity_listen.xml  activity_main.xml  activity_nodes.xml  activity_notification.xml  activity_paper_key.xml  activity_paper_key_prove.xml  activity_pin.xml  activity_pin_template.xml  activity_qr.xml  activity_reset_account.xml  activity_restore.xml  activity_security_center.xml  activity_send_message.xml  activity_set_pin.xml  activity_settings.xml  activity_share.xml  activity_share_data.xml  activity_spend_limit.xml  activity_start.xml  activity_support.xml  (+64 more)
app/src/main/res/menu/: bottom_nav.xml  main_contact.xml  send_message.xml
app/src/main/res/navigation/: contact.xml  home.xml  message.xml  mine.xml  nav_main.xml  send.xml
app/src/main/res/values/: android_strings.xml  arrays.xml  attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-night/: strings.xml  themes.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-sv/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: api_settings_eac.xml  api_settings_home.xml  api_settings_ipfs.xml
app/src/test/java/: PaperKeyTests.java
(+463 files in other folders)
